working-assets/css/filters.css
filters-menu-bar {
  width: 100%;
  position: sticky;
  display: block;
  top: 49px;
  height: 100%;
  border-block: 1px solid var(--c-light-grey);
  z-index: 15;

  &.accent-bg {
    padding: 0;
  }

  & .max-width {
    display: flex;
    justify-content: space-between;
    padding: 1rem 0;
    margin: 0 auto;
    color: var(--c-grey);
  }

  & slide-drawer {
    padding: 15px;

    & .filterby-container>span {
      font-family: var(--emphasis-heading-font-family);
      font-size: var(--txt-h2);
      text-transform: uppercase;
      transition: color .4s ease;
    }
  }

  & content-accordian {
    & span:last-child {
      margin: 0 0 0 auto;
    }

    & .accordian-header {
      border-top: 1px solid var(--c-light-grey);
    }

    & .accordian-content {
      max-height: 33vh;
      overflow-y: auto;
      margin: 0 15px;
    }
  }

  & a {
    align-items: center;
    display: inline-flex;
    gap: 0.5rem;
  }

  & a:first-child {
    padding: 0.2em 0.6em;
    margin: 0 auto 0 0;
  }

}

.column-controls {
  display: flex;
  align-items: center;
  gap: .5rem;
  flex: 0 0 auto;

  & svg {
    stroke: var(--c-grey);
    transition: stroke var(--bezier) 0.1s;
  }

  & button {
    place-items: center;
    display: grid;
    aspect-ratio: 1;
    width: 1.2rem;
    height: 1.2rem;
  }

  & button:hover svg {
    stroke: var(--c-dark-grey);
  }

  &[data-grid="large-grid"] .grid-control--up {
    cursor: default;

    & svg {
      stroke: var(--c-light-grey);
    }
  }

  &[data-grid="small-grid"] .grid-control--down {
    cursor: default;

    & svg {
      stroke: var(--c-light-grey);
    }
  }

  & span {
    flex: 1 0 auto;
    display: block;
  }
}

.price_range-sliders {
  position: relative;
  min-height: 25px;
  width: 96%;
  margin: 0 auto;
}


#toSlider,
#fromSlider {
  border: 0;
  position: absolute;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2px;
  background-color: #C6C6C6;
  pointer-events: none;
  top: 50%;
  transform: translateY(-50%);
  padding: 0 !important;

  &:focus {
    outline-color: transparent;
  }

  &::-webkit-slider-thumb {
    -webkit-appearance: none;
    pointer-events: all;
    width: 10px;
    height: 10px;
    background-color: #fff;
    rotate: 45deg;
    box-shadow: 0 0 0 1px #333;
    cursor: pointer;
    scale: 1;
    transform: scale 0.2s var(--bezier);
    z-index: 2;
  }

  &::-moz-range-thumb {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    pointer-events: all;
    width: 12px;
    height: 12px;
    background-color: #333;
    border: none;
    transform: rotate(45deg);
    box-shadow: 0 0 0 1px #333;
    cursor: pointer;
  }

  &::-webkit-slider-thumb:hover {
    background: var(--c-off-white);
  }

  &::-webkit-slider-thumb:active {
    scale: 0.9
  }
}

#fromSlider {
  height: 0;
  z-index: 1;
}

.price-divisions {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-bottom: 15px;
  position: relative;
}

.price-divisions .price-mid:before {
  content: "";
  width: 1px;
  display: block;
  height: 10px;
  position: absolute;
  background-color: black;
  top: -15px;
  left: calc(50%);
}


.price-mid {
  text-align: center;
}

.price-high {
  text-align: right;
}

.price-selector {
  display: flex;
  justify-content: space-around;
  margin-bottom: 1em;

  &>div {
    text-align: center;
  }

}

.price-input {
  display: flex;
  align-items: center;
  margin: 0 0.3em;

  & input {
    padding: 0.7rem 0.5rem 0.5rem !important;
    margin-left: 0.5ch;
  }
}

#filter-form {
  color: var(--c-dark-grey);
  width: auto;
  min-height: 100%;
  display: flex;
  flex-direction: column;
}

.filter_item-values {
  & ul {
    flex-direction: column;
  }

  & li {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
  }

}


/* HIDE AVAILABILITY UNLESS SIZE? */
/* #filter-form {
  .filter_item-availability {
    display: none;
  }

  & .filter_item:has(.item-size:not([data-active-count="0"])) {
    color: red;

    & ~ .filter_item-availability {
      display: block;
    }
  }
} */

.filter_value-label {
  display: flex;
  gap: .5em;
  align-items: center;

  & .swatch {
    width: 1.2em;
    height: 1.2em;
    margin: 0 0.2em;
    border: 1px solid var(--c-dark-grey);
    transition: rotate 0.15s var(--bezier);
  }

}

.filter_value-checkbox>input:checked+label>.swatch {
  rotate: 45deg;
}

.filter_value-checkbox input:has(+label>.swatch) {
  display: none;
}

.filter-apply {
  display: none;
}

.sortby-container {
  margin: auto 0 0;
  padding: 0 1rem;
}

@media screen and (width < 1100px) {
  .sortby-container label {
    display: none;
  }
}

@media screen and (900px < width < 1000px) {
  .column-controls span {
    display: none
  }
}

@media screen and (width > 900px) {
  .filterby-container {
    display: flex;
    align-items: center;
    gap: 1em;
  }

  .sortby-container label {
    display: block;
  }


  .sortby-container {
    border-left: 1px solid var(--c-light-grey);
    margin-left: 1rem;
  }

  form#filter-form {
    flex-direction: row-reverse;
    justify-content: space-between;
    min-height: 0;
  }

  content-accordian {
    font-size: var(--txt-p);
    display: flex;
    flex-grow: 1;
    gap: 15px;
    justify-content: stretch;
    margin: 0;

    & .accordian-header {
      height: auto;
      font-weight: 400;
      border: none !important;

      &:hover {
        cursor: pointer;
      }
    }

    & span:last-child {
      display: none;
    }

    & .accordian-content {
      gap: 10px;
      height: -moz-fit-content;
      height: fit-content;
      margin: 0;
    }
  }

  filters-menu-bar {
    z-index: 3;

    & slide-drawer {
      border: none;
      box-shadow: none;
      height: auto;
      max-width: none;
      overflow: visible;
      overflow: initial;
      opacity: 1;
      padding: 0;
      position: static;
      right: 0 !important;
      width: 100%;
      z-index: 2;
      background-color: transparent !important;
      translate: 0 !important;

      & .drawer-close {
        display: none;
        visibility: hidden;
      }

      & form {
        display: flex;
        align-items: center;
        gap: 0.5em;

        & .filterby-container>span {
          font-family: var(--text-font-family);
          font-size: var(--txt-p);
          text-transform: none;
        }
      }
    }
  }

  #productFilters[aria-hidden="false"]~.mobile-filter-button {
    filter: blur(2px);
  }

  .mobile-filter-button {
    display: none;
  }

  .filter_item {
    position: relative;

    & .filter_item-values {
      position: absolute;
      top: 100%;
      right: -2em;
      padding: 1em;
      min-width: 200px;
      background: var(--c-white);
      display: none;
      border: 1px solid var(--c-grey);
    }

    &:hover {
      & .filter_item-values {
        display: block;
      }
    }
  }
}

